force-app/main/default/objects/CampaignMember/fields/Alert_Source__c.field-meta.xml
<CustomField>
    <fullName>Alert_Source__c</fullName>
    <label>Alert Source</label>
    <length>18</length>
    <type>Text</type>
</CustomField>