force-app/main/default/objects/CampaignMember/fields/MB_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>MB_Alert_Date__c</fullName>
    <label>MB Alert Date</label>
    <type>Date</type>
</CustomField>