force-app/main/default/objects/CampaignMember/fields/MB_Alert_Intel__c.field-meta.xml
<CustomField>
    <fullName>MB_Alert_Intel__c</fullName>
    <description>Monitorbase alert intel.  Shows why an alert was triggered.</description>
    <label>MB Alert Intel</label>
    <type>TextArea</type>
</CustomField>